--- a/FlightSimulator/Views/Joystick.xaml
+++ b/FlightSimulator/Views/Joystick.xaml
@@ -12,13 +12,37 @@
             <RowDefinition Height="111*"/>
             <RowDefinition Height="47*"/>
         </Grid.RowDefinitions>
-        
+
         <Canvas  x:Name="Base" Margin="221,36,239,97.6" Width="340" Height="340" Grid.RowSpan="2">
-            <Slider Name="slider1"  Maximum="1" Minimum="-1" ValueChanged="Slider_ValueChanged" Background="White" TickFrequency ="0.2" TickPlacement="BottomRight" RenderTransformOrigin="0.228,1.055" Height="35" Canvas.Left="-119" Canvas.Top="345" Width="553"/>
+            <Slider Name="sliderRudder"  Maximum="1" Minimum="-1" ValueChanged="SliderRudder_ValueChanged"  Background="White" TickFrequency ="0.2" TickPlacement="BottomRight" RenderTransformOrigin="0.228,1.055" Height="35" Canvas.Left="-119" Canvas.Top="345" Width="553"/>
             <Label Name="lblTest" Content="{Binding ElementName=slider1, Path=Value}"/>
-            
-            <Slider Name="slider2" Maximum="1" Minimum="-1" ValueChanged="Slider_ValueChanged" Background="White" Orientation ="Vertical" TickPlacement="BottomRight" TickFrequency ="0.2" Height="340" Canvas.Left="-144" Width="39" RenderTransformOrigin="0.693,0.517"/>
-            <Label Name="lblTest2" Content="{Binding ElementName=slider2, Path=Value}"/>
+
+            <Slider Name="sliderThrottle" Maximum="1" Minimum="-1" ValueChanged="SliderThrottle_ValueChanged"  Background="White" Orientation ="Vertical" TickPlacement="BottomRight" TickFrequency ="0.2" Height="340" Canvas.Left="-144" Width="39" RenderTransformOrigin="0.693,0.517"/>
+            <Label Name="lblTest2" Content="{Binding ElementName=slider2, Path=Value}" Height="26" Width="17"/>
+
+            <TextBlock Canvas.Left="146" Canvas.Top="-28" >ailrone</TextBlock>
+            <TextBlock Canvas.Left="146" Canvas.Top="362" >rudder</TextBlock>
+            <TextBlock Canvas.Left="360" Canvas.Top="144" RenderTransformOrigin="0.5,0.5" Height="37" Width="71" >
+                <TextBlock.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="-90.36"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </TextBlock.RenderTransform>elevator</TextBlock>
+
+            <TextBlock  Canvas.Left="-202" Canvas.Top="167" RenderTransformOrigin="0.5,0.5"  >
+
+                <TextBlock.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="90.452"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </TextBlock.RenderTransform>throttle</TextBlock>
+
             <Ellipse HorizontalAlignment="Left" Height="340" VerticalAlignment="Top" Width="340">
                 <Ellipse.Fill>
                     <RadialGradientBrush>
