--- a/FlightSimulator/MainWindow.xaml
+++ b/FlightSimulator/MainWindow.xaml
@@ -5,22 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FlightSimulator"
         xmlns:Controls="clr-namespace:FlightSimulator.Views"
-        mc:Ignorable="d">
+        mc:Ignorable="d"
+        Title="Main window" Height="500" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="718*"/>
-            <ColumnDefinition Width="43*"/>
+            <ColumnDefinition Width="106*"/>
+            <ColumnDefinition Width="40*"/>
+            <ColumnDefinition Width="603*"/>
+            <ColumnDefinition Width="45*"/>
         </Grid.ColumnDefinitions>
-        <Controls:Auto Loaded="Auto_Loaded" Grid.ColumnSpan="2" Margin="0,0,0.333,0.333">
 
-        </Controls:Auto>
-        <TabControl Margin="0,-16,0.333,15.333" Grid.ColumnSpan="2">
+        <TabControl Margin="0,-45,0.334,15.667" Grid.ColumnSpan="2" Height="450" Width="410" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Column="2">
             <TabItem Header="Manual">
-                <Controls:Joystick Loaded="Joystick_Loaded">
+                <Controls:Joystick Loaded="Joystick_Loaded" Margin="-186,-200,-214,-200">
                 </Controls:Joystick>
             </TabItem>
-            <TabItem Header="Auto">
-                <Controls:Auto Loaded="Auto_Loaded">
+            <TabItem Header="Auto Pilot">
+                <Controls:Auto Loaded="Auto_Loaded" Margin="-200">
                 </Controls:Auto>
             </TabItem>
 
