--- a/FlightSimulator/Views/Joystick.xaml
+++ b/FlightSimulator/Views/Joystick.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:vv="clr-namespace:FlightSimulator.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="800" Height="473.716">
+             mc:Ignorable="d" d:DesignWidth="400" Height="450">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -14,15 +14,15 @@
         </Grid.RowDefinitions>
 
         <Canvas  x:Name="Base" Margin="221,36,239,97.6" Width="340" Height="340" Grid.RowSpan="2">
-            <Slider Name="sliderRudder"  Maximum="1" Minimum="-1" ValueChanged="SliderRudder_ValueChanged"  Background="White" TickFrequency ="0.2" TickPlacement="BottomRight" RenderTransformOrigin="0.228,1.055" Height="35" Canvas.Left="-119" Canvas.Top="345" Width="553"/>
+            <Slider Name="sliderRudder"  Maximum="1" Minimum="-1" ValueChanged="SliderRudder_ValueChanged"  Background="White" TickFrequency ="0.2" TickPlacement="BottomRight" RenderTransformOrigin="0.228,1.055" Height="28" Canvas.Top="345" Width="340"/>
             <Label Name="lblTest" Content="{Binding ElementName=slider1, Path=Value}"/>
 
-            <Slider Name="sliderThrottle" Maximum="1" Minimum="-1" ValueChanged="SliderThrottle_ValueChanged"  Background="White" Orientation ="Vertical" TickPlacement="BottomRight" TickFrequency ="0.2" Height="340" Canvas.Left="-144" Width="39" RenderTransformOrigin="0.693,0.517"/>
+            <Slider Name="sliderThrottle" Maximum="1" Minimum="-1" ValueChanged="SliderThrottle_ValueChanged"  Background="White" Orientation ="Vertical" TickPlacement="BottomRight" TickFrequency ="0.2" Height="340" Canvas.Left="-29" Width="39" RenderTransformOrigin="0.693,0.517"/>
             <Label Name="lblTest2" Content="{Binding ElementName=slider2, Path=Value}" Height="26" Width="17"/>
 
-            <TextBlock Canvas.Left="146" Canvas.Top="-28" >ailrone</TextBlock>
-            <TextBlock Canvas.Left="146" Canvas.Top="362" >rudder</TextBlock>
-            <TextBlock Canvas.Left="360" Canvas.Top="144" RenderTransformOrigin="0.5,0.5" Height="37" Width="71" >
+            <TextBlock Canvas.Left="145" Canvas.Top="-21" >ailrone</TextBlock>
+            <TextBlock Canvas.Left="146" Canvas.Top="378" >rudder</TextBlock>
+            <TextBlock Canvas.Left="329" Canvas.Top="139" RenderTransformOrigin="0.5,0.5" Height="37" Width="71" >
                 <TextBlock.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -32,7 +32,7 @@
                     </TransformGroup>
                 </TextBlock.RenderTransform>elevator</TextBlock>
 
-            <TextBlock  Canvas.Left="-202" Canvas.Top="167" RenderTransformOrigin="0.5,0.5"  >
+            <TextBlock  Canvas.Left="-54" Canvas.Top="168" RenderTransformOrigin="0.5,0.5"  >
 
                 <TextBlock.RenderTransform>
                     <TransformGroup>
